--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     </div>
     <div class="gallery-item" tabindex="0">
       <img src="paw.jfif" alt="Юккина лапка" />
-      <div class="caption">Юккина лапка 🤣</div>
+      <div class="caption">Юккина лапка </div>
     </div>
     <div class="gallery-item" tabindex="0">
       <img src="sitting.jpg" alt="Юкки очень мило сидит" />
